<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    android:layout_margin="5dp"
    app:cardElevation="7dp"
    app:cardCornerRadius="10dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:drawableEnd="@drawable/head_question"
            android:elevation="7dp"
            android:background="@drawable/bg_orange"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:paddingEnd="15dp"
            android:paddingStart="10dp"
            android:layout_margin="5dp"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:ems="10"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textStyle="bold"
            android:id="@+id/cardTitle7"
            android:text="@string/consultancy"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/consultancy_description"
            android:layout_below="@+id/cardTitle7"
            android:layout_marginEnd="100dp"
            android:ems="10"
            android:layout_marginStart="10dp"
            android:id="@+id/cardDesc7"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/icons_2"
            android:text="@string/subscribe"
            android:layout_below="@+id/cardDesc7"
            app:cornerRadius="20dp"
            android:textColor="@color/white"
            app:iconGravity="textEnd"
            app:iconTint="@color/white"
            android:padding="5dp"
            android:layout_marginBottom="10dp"
            app:iconPadding="5dp"
            android:id="@+id/btnGetStarted5"
            android:layout_margin="10dp"
            app:icon="@drawable/arrow_top_right_thin_circle_outline"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>

    </RelativeLayout>


</com.google.android.material.card.MaterialCardView>